[package]
name = "asdfler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = {version = "4.1", features = ["derive"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = "0.9.19"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
which = "4.4.0"
