[package]
name = "asdfler"
version = "0.4.0"
edition = "2021"
authors = ["Jon Anderson <coding@jpanderson.dev>"]
license = "MIT"
description = "CLI tool for installing tools with asdf package manager"
repository = "https://github.com/tedious-tools/asdfler"
keywords = ["cli", "asdf"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = {version = "4.2", features = ["cargo", "derive"] }
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = "0.9.19"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
which = "4.4.0"
